--- a/src/app/pages/forum/components/sub-forum/sub-forum-detail/sub-forum-detail.component.scss
+++ b/src/app/pages/forum/components/sub-forum/sub-forum-detail/sub-forum-detail.component.scss
@@ -63,5 +63,11 @@ nz-select{
   padding-top: 10px;
   span{
     margin-right: 8px;
+    font-weight: 600;
   }
+}
+
+.allow-text {
+  padding-top: 8px;
+  font-weight: 600;
 }
