--- a/src/app/pages/ticket/components/create-ticket/create-ticket.component.html
+++ b/src/app/pages/ticket/components/create-ticket/create-ticket.component.html
@@ -15,14 +15,16 @@
     <form [formGroup]="ticketForm">
       <div nz-row [nzGutter]=[16,16]>
         <div nz-col [nzSpan]="9">
-          <span class="text-label">
-            {{'ticket_name' | translate}}
-          </span>
-          <input nz-input autofocus formControlName="name"
-            [nzStatus]="(ticketForm.get('name')?.invalid && (ticketForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
+          <div class="d-flex justify-content-between align-items-center">
+            <span class="text-label ">
+              {{ 'ticket_name' | translate }}
+              <span class="text-danger">*</span>
+            </span>
+            <span nzTooltipTitle="{{'guide_learning_ticket_name' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
+          <input nz-input autofocus formControlName="name" [nzStatus]="(ticketForm.get('name')?.invalid && (ticketForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
 
-          <span class="text-danger"
-            *ngIf="(ticketForm.get('name')?.touched || isSubmit)  && ticketForm.get('name')?.hasError('required')">
+          <span class="text-danger" *ngIf="(ticketForm.get('name')?.touched || isSubmit)  && ticketForm.get('name')?.hasError('required')">
             {{'ticket_name' | translate}} {{'cannot_blank' | translate}}
           </span>
         </div>
@@ -38,32 +40,35 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <span class="text-label">
-            {{ 'course' | translate }}
-            <span class="text-danger">*</span>
-          </span>
-
+          <div class="d-flex justify-content-between align-items-center">
+            <span class="text-label ">
+              {{ 'course' | translate }}
+              <span class="text-danger">*</span>
+            </span>
+            <span nzTooltipTitle="{{'guide_learning_ticket_course' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
           <div>
-            <nz-select [nzDisabled]="!isCreate" style="display: block" formControlName="courseId"
-              [nzStatus]="(ticketForm.get('courseId')?.invalid && (ticketForm.get('courseId')?.touched || isSubmit)) ? 'error' : ''">
+            <nz-select [nzDisabled]="!isCreate" style="display: block" formControlName="courseId" [nzStatus]="(ticketForm.get('courseId')?.invalid && (ticketForm.get('courseId')?.touched || isSubmit)) ? 'error' : ''">
               <nz-option *ngFor="let course of listCourse" [nzValue]="course.id" [nzLabel]="course.title"></nz-option>
             </nz-select>
           </div>
 
-          <span class="text-danger"
-            *ngIf="(ticketForm.get('courseId')?.touched || isSubmit) && ticketForm.get('courseId')?.hasError('required')">
+          <span class="text-danger" *ngIf="(ticketForm.get('courseId')?.touched || isSubmit) && ticketForm.get('courseId')?.hasError('required')">
             {{ 'course_name' | translate }} {{'cannot_blank' | translate}}
           </span>
         </div>
 
         <div nz-col [nzSpan]="9">
-          <span class="text-label">
-            {{'price' | translate}}
-          </span>
+          <div class="d-flex align-items-center">
+            <span class="text-label" style="margin-right:.5rem">
+              {{ 'price' | translate }}
+              <span class="text-danger">*</span>
+            </span>
+            <span nzTooltipTitle="{{'guide_learning_ticket_price' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
 
           <div class="width-50">
-            <nz-input-number formControlName="price" style="width: 100%" [nzMin]="0" [nzStep]="1"
-              [nzFormatter]="formatterVnd" [nzParser]="parserVnd"></nz-input-number>
+            <nz-input-number formControlName="price" style="width: 100%" [nzMin]="0" [nzStep]="1" [nzFormatter]="formatterVnd" [nzParser]="parserVnd"></nz-input-number>
           </div>
         </div>
 
