feature add delete price list and catalog

--- a/src/app/pages/forum/components/config/forum-config-detail/forum-config-detail.component.html
+++ b/src/app/pages/forum/components/config/forum-config-detail/forum-config-detail.component.html
@@ -86,6 +86,10 @@
             </button>
           </div>
         </div>
+
+        <div nz-col [nzSpan]="8">
+
+        </div>
       </div>
     </form>
   </div>
