add localized tour guide for a bunch of sections in "Thiết lập" by using boarding.js (searchable)

--- a/src/app/pages/transaction/transaction-history/transaction-history.component.html
+++ b/src/app/pages/transaction/transaction-history/transaction-history.component.html
@@ -40,7 +40,7 @@
                 <th nzWidth="180px" nzAlign="center">{{ 'member_package' | translate }}</th>
                 <th nzWidth="200px" nzColumnKey="price" [nzSortFn]="true" nzAlign="center">{{ 'paid_amount' | translate }}</th>
                 <th nzWidth="180px" nzAlign="center">{{ 'agent' | translate }}</th>
-                <th nzWidth="180px" nzAlign="center">{{ 'agent_code' | translate }}</th>
+                <th nzWidth="180px" nzAlign="center">{{ 'agency_code' | translate }}</th>
                 <th nzWidth="220px" nzAlign="center">{{ 'referrer' | translate }}</th>
                 <th nzWidth="240px" nzAlign="center">{{ 'referral_phone' | translate }}</th>
                 <th nzWidth="230px" nzAlign="center">{{ 'referral_email' | translate }}</th>
