--- a/src/styles.scss
+++ b/src/styles.scss
@@ -142,3 +142,7 @@
 //     border-radius: 25px;
 //     background: var(--ds-system-background-scroll);
 // }
+
+
+@import "boarding.js/styles/main.css";
+@import "boarding.js/styles/themes/basic.css";
