--- a/src/app/shared/layouts/header/header.component.html
+++ b/src/app/shared/layouts/header/header.component.html
@@ -1,10 +1,19 @@
 <div class="header-side-bar">
 
-  <div class="download-layout" *ngIf="downloadStatus === 'pending'"
-    (click)="createNotification('info', 'Quá trình download file excel đang chạy')">
+  <div class="download-layout" *ngIf="downloadStatus === 'pending'" (click)="createNotification('info', 'Quá trình download file excel đang chạy')">
     <div class="download-process"></div>
     <span nz-icon nzType="download" nzTheme="outline"></span>
   </div>
+
+  <div class="tutorial-box" style="margin-right:1rem">
+    <input placeholder="{{'setting_tutorial' | translate}}" nz-input [(ngModel)]="tutorialModel" (ngModelChange)="searchTutorial($event)" [nzAutocomplete]="auto" />
+    <nz-autocomplete #auto>
+      <nz-auto-option *ngFor="let option of filteredOptions" [nzValue]="option['label']" [nzLabel]="option['label'] | translate" (selectionChange)="onSelectTutorial($event)">
+        {{ option['label'] | translate }}
+      </nz-auto-option>
+    </nz-autocomplete>
+  </div>
+
 
   <div class="switch-language">
     <nz-select [(ngModel)]="lang" (ngModelChange)="changeLang($event)">
@@ -14,13 +23,11 @@
   </div>
 
   <span nz-tooltip [nzTooltipTitle]="titleTemplate" nzTooltipPlacement="left" [nzTooltipColor]="'#3c4043e6'">
-    <button *ngIf="!linkAvatar" nz-button nzType="default" nzShape="circle" nz-dropdown [nzDropdownMenu]="menu"
-      nzTrigger="click">
+    <button *ngIf="!linkAvatar" nz-button nzType="default" nzShape="circle" nz-dropdown [nzDropdownMenu]="menu" nzTrigger="click">
       <span nz-icon nzType="user"></span>
     </button>
 
-    <nz-avatar *ngIf="linkAvatar" nzIcon="user" [nzSrc]="linkAvatar" style="cursor: pointer" nz-dropdown
-      [nzDropdownMenu]="menu" nzTrigger="click"></nz-avatar>
+    <nz-avatar *ngIf="linkAvatar" nzIcon="user" [nzSrc]="linkAvatar" style="cursor: pointer" nz-dropdown [nzDropdownMenu]="menu" nzTrigger="click"></nz-avatar>
   </span>
 
   <ng-template #titleTemplate let-thing>
