--- a/src/app/pages/forum/components/config/forum-config-detail/forum-config-detail.component.html
+++ b/src/app/pages/forum/components/config/forum-config-detail/forum-config-detail.component.html
@@ -11,13 +11,14 @@
             {{ 'forum_name' | translate }}
             <span class="text-danger">*</span>
           </span>
-          <input nz-input autofocus formControlName="name" [nzStatus]="(forumConfigForm.get('name')?.invalid &&
+          <input nz-input autofocus formControlName="name"
+                 [nzStatus]="(forumConfigForm.get('name')?.invalid &&
                              (forumConfigForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
 
-          <span class="text-danger" *ngIf="(forumConfigForm.get('name')?.touched || isSubmit)  &&
-                        forumConfigForm.get('name')?.hasError('required')">
-            {{'forum_name' | translate }} {{'cannot_blank' | translate}}!
-          </span>
+          <span class="text-danger"
+                *ngIf="(forumConfigForm.get('name')?.touched || isSubmit)  &&
+                        forumConfigForm.get('name')?.hasError('required')"
+          >{{'forum_name' | translate }} {{'cannot_blank' | translate}}!</span>
         </div>
 
         <div nz-col [nzSpan]="8">
@@ -35,7 +36,8 @@
           </span>
 
           <div class="select-url">
-            <input nz-input [value]="forumConfigForm.get('logo')?.value" formControlName="logo" [nzStatus]="(forumConfigForm.get('logo')?.invalid &&
+            <input nz-input [value]="forumConfigForm.get('logo')?.value" formControlName="logo"
+                   [nzStatus]="(forumConfigForm.get('logo')?.invalid &&
                                (forumConfigForm.get('logo')?.touched || isSubmit)) ?
                                'error' : ''">
 
@@ -44,7 +46,8 @@
             </button>
           </div>
 
-          <span class="text-danger" *ngIf="(forumConfigForm.get('logo')?.touched || isSubmit)  &&
+          <span class="text-danger"
+                *ngIf="(forumConfigForm.get('logo')?.touched || isSubmit)  &&
                         forumConfigForm.get('logo')?.hasError('required')">
             {{'logo_link' | translate}}
             {{'cannot_blank' | translate}}!
@@ -58,7 +61,8 @@
           </span>
 
           <div class="select-url">
-            <input nz-input [value]="forumConfigForm.get('banner')?.value" formControlName="banner" [nzStatus]="(forumConfigForm.get('banner')?.invalid &&
+            <input nz-input [value]="forumConfigForm.get('banner')?.value" formControlName="banner"
+                   [nzStatus]="(forumConfigForm.get('banner')?.invalid &&
                                (forumConfigForm.get('banner')?.touched || isSubmit)) ?
                                'error' : ''">
 
@@ -67,7 +71,8 @@
             </button>
           </div>
 
-          <span class="text-danger" *ngIf="(forumConfigForm.get('banner')?.touched || isSubmit)  &&
+          <span class="text-danger"
+                *ngIf="(forumConfigForm.get('banner')?.touched || isSubmit)  &&
                         forumConfigForm.get('banner')?.hasError('required')">
             {{ 'banner_link' | translate }} {{'cannot_blank' | translate}}!
           </span>
@@ -86,9 +91,55 @@
             </button>
           </div>
         </div>
+        <nz-divider nzText="Cấu hình footer diễn đàn"></nz-divider>
+        <div nz-col [nzSpan]="8">
+          <span class="text-label">
+            Logo footer
+          </span>
+
+          <div class="select-url">
+            <input nz-input formControlName="footerLogo">
+            <button nz-button nzType="primary" (click)="onSelectFile('footerLogo')">
+              <span nz-icon nzType="upload"></span>
+            </button>
+          </div>
+        </div>
 
         <div nz-col [nzSpan]="8">
+          <span class="text-label">
+            Màu chữ footer
+          </span>
+          <app-color-picker formControlName="footerTextColor"></app-color-picker> 
+        </div>
 
+        <div nz-col [nzSpan]="8"></div>
+
+        <div nz-col [nzSpan]="8">
+          <span class="text-label">
+            Ảnh nền footer
+          </span>
+
+          <div class="select-url">
+            <input nz-input formControlName="footerBackgroundImage">
+            <button nz-button nzType="primary" (click)="onSelectFile('footerBackgroundImage')">
+              <span nz-icon nzType="upload"></span>
+            </button>
+          </div>
+        </div>
+
+        <div nz-col [nzSpan]="8">
+          <span class="text-label">
+            Màu nền footer
+          </span>
+          <app-color-picker formControlName="footerBackgroundColor"></app-color-picker>
+        </div>
+
+        <div nz-col [nzSpan]="16">
+          <span class="text-label">
+            {{'description' | translate}}
+          </span>
+
+          <textarea formControlName="footerDescription" nz-input [nzAutosize]="{ minRows: 3 }"></textarea>
         </div>
       </div>
     </form>
